force-app/main/default/objects/My_Pay__c/My_Pay__c.object-meta.xml
<CustomObject>
    <label>My Pay</label>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Pays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>