force-app/main/default/objects/My_Pay__c/fields/Balance_Pay__c.field-meta.xml
<CustomField>
    <fullName>Balance_Pay__c</fullName>
    <formula>Net_Pay__c -  Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>