force-app/main/default/objects/My_Pay__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USDA</fullName>
            </value>
            <value>
                <fullName>FREDDIEMAC</fullName>
                <default>true</default>
                <label>FREDDIEMAC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>