force-app/main/default/objects/My_Pay__c/fields/Employer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Employer_Percentage__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>Employer Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>