force-app/main/default/objects/My_Pay__c/fields/Net_Pay__c.field-meta.xml
<CustomField>
    <fullName>Net_Pay__c</fullName>
    <formula>Total_Pay__c -  ( Total_Pay__c * Employer_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>