force-app/main/default/objects/My_Pay__c/fields/Pay_Received__c.field-meta.xml
<CustomField>
    <fullName>Pay_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Received from vendor?</label>
    <type>Checkbox</type>
</CustomField>