force-app/main/default/objects/My_Pay__c/fields/Rate_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Hour__c</fullName>
    <defaultValue>77</defaultValue>
    <label>Rate Per Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>