force-app/main/default/objects/My_Pay__c/fields/Total_No_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Hours__c</fullName>
    <label>Total No Of Hours</label>
    <summarizedField>Weekly_Pay__c.No_of_Hours__c</summarizedField>
    <summaryForeignKey>Weekly_Pay__c.My_Pay__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>