force-app/main/default/objects/My_Pay__c/fields/Total_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Pay__c</fullName>
    <formula>IF(Pay_Received__c, Rate_Per_Hour__c * Total_No_Of_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>