force-app/main/default/objects/My_Pay__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Total_No_Of_Hours__c</columns>
    <columns>Rate_Per_Hour__c</columns>
    <columns>Pay_Received__c</columns>
    <columns>Total_Pay__c</columns>
    <columns>Employer_Percentage__c</columns>
    <columns>Net_Pay__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Paid__c</columns>
    <columns>Balance_Pay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>